<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Angband</string>

    <string-array name="gamePluginDescriptions">
        <item>Angband 4.2.5</item>
        <item>FrogComposband 7.1.salmiak</item>
        <item>NPPAngband 0.4.1</item>
        <item>NPPAngband 0.5.4</item>
        <item>Sil-Q 1.5.0</item>
        <item>FAangband 2.0.1</item>
        <item>NPPAngband 7.1.0</item>
        <item>Zangband 2.7.5-pre1</item>
        <item>ToME 2.3.8 ah</item>
        <item>Unangband 0.6.6</item>
    </string-array>
    <string-array name="gamePluginNames">
        <item>angband</item>
        <item>frogcomposband</item>
        <item>npp041</item>
        <item>npp054</item>
        <item>silq</item>
        <item>faangband</item>
        <item>npp710</item>
        <item>zangband275</item>
        <item>tome23x</item>
        <item>unangband066</item>
    </string-array>
    <string-array name="gamePlugins">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string name="version">0.0.0.1</string>

    <string name="menu_preferences">Preferences</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_help">Help</string>
    <string name="menu_quit">Quit</string>

    <string name="menu_profile_add">Edit Profile</string>

    <string name="angband_help">Angband Help</string>
    <string name="preferences">Preferences</string>
    <string name="profiles">Profiles</string>
    <string name="profileadd">New Profile</string>
    <string name="storage">Storage</string>

    <string name="profile_name_caption">Name or description of profile</string>
    <string name="profile_savefile_caption">Filename for saved game</string>

    <string name="display_category">Display</string>
    <string name="control_category">Control</string>
    <string name="game_category">Game</string>

    <string name="description">Angband is a dungeon-crawling roguelike RPG game.</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Enable or disable vibration in game</string>
    <string name="preferences_fullscreen_title">Full screen</string>
    <string name="preferences_fullscreen_summary">Enable or disable game in full screen</string>
    <string name="preferences_orientation_title">Orientation</string>
    <string name="preferences_orientation_summary">Select screen orientation</string>
    <string name="preferences_keyboardOverlap_title">Overlap Input Controls</string>
    <string name="preferences_keyboardOverlap_summary">Put the keyboard/ribbon on top of the game view</string>
    <string name="preferences_gameplugin_title">Selected variant</string>
    <string name="preferences_gameplugin_summary">Note that these Game settings stick to the active profile</string>
    <string name="preferences_enablevkey_title">Enable virtual keyboard</string>
    <string name="preferences_enablevkey_summary">Display virtual keyboard (forces portrait orientation)</string>
    <string name="preferences_portraitkb_title">Portrait keyboard</string>
    <string name="preferences_portraitkb_summary">Display virtual keyboard in portrait orientation</string>
    <string name="preferences_landscapekb_title">Landscape keyboard</string>
    <string name="preferences_landscapekb_summary">Display virtual keyboard in landscape orientation</string>
    <string name="preferences_enablevolkeyfontsize_title">Volume key font sizing</string>
    <string name="preferences_enablevolkeyfontsize_summary">Font size changed by volume up &amp; down keys</string>
    <string name="preferences_enabletouch_title">Enable touch directionals</string>
    <string name="preferences_enabletouch_summary">Turn on touchscreen directional controls</string>
    <string name="preferences_touchright_title">Touch directionals to the right</string>
    <string name="preferences_touchright_summary">Place the touch directionals to the right side</string>

    <string name="preferences_skipwelcome_title">Skip welcome screen</string>
    <string name="preferences_skipwelcome_summary">Automatically skip the Angband welcome screen at startup</string>

    <string name="def_number_subwindows">3</string>
    <string name="def_rows_subwindows">40</string>
    <string name="def_cols_subwindows">48</string>
    <string name="def_font_subwindows">50</string>
    <string name="def_keymap_len">50</string>

    <string-array name="orientationDescriptions">
      <item>Sensor</item>
	  <item>Portrait</item>
	  <item>Landscape</item>
    </string-array>
    <string-array name="orientations">
      <item>0</item>
      <item>1</item>
      <item>2</item>
    </string-array>

	<string-array name="virtKeyActionDescriptions">
		<item>None</item>
		<item>Ctrl Key</item>
		<item>Enter Key</item>
		<item>Back (Esc)</item>
		<item>Period (.)</item>
        <item>Comma (,)</item>
        <item>Five (5)</item>
		<item>Shift Key</item>
		<item>Space</item>
		<item>Virtual Keyboard</item>
		<item>Zoom In</item>
		<item>Zoom Out</item>
        <item>Center player (@)</item>
	</string-array>
	<string-array name="virtKeyActions">
		<item>None</item>
		<item>CtrlKey</item>
		<item>EnterKey</item>
		<item>BackKey</item>
		<item>Period</item>
        <item>Comma</item>
        <item>Five</item>
		<item>ShiftKey</item>
		<item>Space</item>
		<item>VirtualKeyboard</item>
		<item>ZoomIn</item>
		<item>ZoomOut</item>
        <item>CenterPlayer</item>
	</string-array>

    <string-array name="graphicsModesDesc">
        <item>None</item>
        <item>Original Tiles</item>
        <item>Adam Bolt\'s tiles</item>
        <item>David Gervai\'s tiles</item>
        <item>Nomad\'s tiles</item>
        <item>Shockbolt\'s tiles Dark</item>
        <item>Shockbolt\'s tiles Light</item>
    </string-array>

    <string-array name="graphicsModesKeys">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="subWindowValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="extraRibbonRows">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="tileMultValues">
        <item>1x1</item>
        <item>2x1</item>
        <item>2x2</item>
        <item>3x2</item>
        <item>3x3</item>
        <item>4x2</item>
        <item>4x4</item>
        <item>6x3</item>
    </string-array>

    <string-array name="DPadColors">
        <item>Gray</item>
        <item>Darker Gray</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Violet</item>
    </string-array>

    <string-array name="FastKeysPopupPosition">
        <item>Top-Right</item>
        <item>Bottom-Right</item>
        <item>Top-Left</item>
        <item>Bottom-Left</item>
        <item>Hidden</item>
    </string-array>

    <string name="def_dpad_color1">Darker Gray</string>
    <string name="def_dpad_color2">Gray</string>

    <string-array name="keyboardPositionKey">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="storageLocations">
        <item>External</item>
        <item>Internal</item>
    </string-array>

    <string-array name="keyboardPositionDesc">
        <item>Center</item>
        <item>Bottom-Left</item>
        <item>Bottom-Right</item>
        <item>Top-Left</item>
        <item>Top-Right</item>
    </string-array>
</resources>
