<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:seekBar="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory android:title="@string/game_category">
	<Preference android:title="Game Profile"
		android:key="angband.gameprofile">
	  	<intent android:action="org.rephial.xyangband.PROFILES" />
	</Preference>
		<org.rephial.xyangband.ProfileListPreference
		   android:title="@string/preferences_gameplugin_title"
		   android:key="angband.gameplugin"
		   android:summary="@string/preferences_gameplugin_summary"
		   android:entries="@array/gamePluginDescriptions"
		   android:entryValues="@array/gamePlugins" />
		<org.rephial.xyangband.ProfileCheckBoxPreference
		   android:title="@string/preferences_skipwelcome_title"
		   android:key="angband.skipwelcome"
		   android:defaultValue="false"
		   android:summary="@string/preferences_skipwelcome_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/display_category">
		<CheckBoxPreference
		   android:key="angband.vibrate"
		   android:defaultValue="false"
		   android:title="@string/preferences_vibrate_title"
		   android:summary="@string/preferences_vibrate_summary" />
		<CheckBoxPreference
		   android:key="angband.fullscreen"
		   android:defaultValue="true"
		   android:title="@string/preferences_fullscreen_title"
		   android:summary="@string/preferences_fullscreen_summary" />
		<ListPreference
		   android:key="angband.orientation"
		   android:defaultValue="0"
		   android:title="@string/preferences_orientation_title"
		   android:summary="@string/preferences_orientation_summary"
		   android:entries="@array/orientationDescriptions"
		   android:entryValues="@array/orientations" />
		<ListPreference
			android:title="Graphics"
			android:summary="Select the tileset"
			android:key="angband.graphics"
			android:defaultValue="6"
			android:entries="@array/graphicsModesDesc"
			android:entryValues="@array/graphicsModesKeys"/>
		<ListPreference
			android:title="Tile Multiplier"
			android:summary="Columns x Rows"
			android:key="angband.tile_multiplier"
			android:defaultValue="4x2"
			android:entries="@array/tileMultValues"
			android:entryValues="@array/tileMultValues"/>
	    <CheckBoxPreference
			android:key="angband.pseudoascii"
			android:defaultValue="false"
			android:title="Pseudo Ascii"
			android:summary="Use ascii for monsters and tiles for everything else" />
		<CheckBoxPreference
			android:key="angband.top_bar"
			android:defaultValue="true"
			android:title="Angband Top Bar"
			android:summary="Stats and other indicators go to top instead of left" />
		<org.rephial.xyangband.SeekBarPreference
			android:key="angband.mult_top_bar"
			android:title="Font Multiplier for Top Bar (100% to 200%)"
			android:dependency="angband.top_bar"
			seekBar:min="0"
			seekBar:max="100"
			seekBar:defaultVal="0" />
		<CheckBoxPreference
			android:key="angband.show_mouse_icon"
			android:defaultValue="false"
			android:title="Show Mouse Icon"
			android:summary="It allows you to execute actions on a grid" />
		<PreferenceScreen
	   		android:title="Sub-Windows settings"
	   		android:summary="(Map views in graphics mode are not supported)">
			<ListPreference
				android:key="angband.n_subwindows"
				android:title="Number of sub-windows"
				android:summary="Issue a redraw (Ctrl-R) after modifying this"
				android:defaultValue="@string/def_number_subwindows"
				android:entries="@array/subWindowValues"
				android:entryValues="@array/subWindowValues"/>
			<org.rephial.xyangband.SeekBarPreference
				android:key="angband.cols_subwindows"
				android:title="Number of columns (Max: 80)"
				seekBar:min="0"
				seekBar:max="100"
				seekBar:defaultVal="@string/def_cols_subwindows" />
			<org.rephial.xyangband.SeekBarPreference
				android:key="angband.rows_subwindows"
				android:title="Number of rows (Max: 24)"
				android:dependency="angband.horiz_subwindows"
				seekBar:min="0"
				seekBar:max="100"
				seekBar:defaultVal="@string/def_rows_subwindows" />
			<org.rephial.xyangband.SeekBarPreference
				android:key="angband.font_size_subwindows"
				android:title="Font multiplier (50% to 150%)"
				seekBar:min="0"
				seekBar:max="100"
				seekBar:defaultVal="@string/def_font_subwindows" />
			<CheckBoxPreference
				android:key="angband.horiz_subwindows"
				android:defaultValue="true"
				android:title="Layout sub-windows horizontally" />
	   	</PreferenceScreen>
  	</PreferenceCategory>
    <PreferenceCategory android:title="@string/control_category">
	  <CheckBoxPreference
			android:key="angband.allowKeyboardOverlap"
			android:defaultValue="true"
			android:title="@string/preferences_keyboardOverlap_title"
			android:summary="@string/preferences_keyboardOverlap_summary" />
	  <org.rephial.xyangband.SeekBarPreference
		  android:key="angband.keyboardOpacity"
		  android:title="Keyboard Opacity"
		  seekBar:min="0"
		  seekBar:max="100"
		  seekBar:defaultVal="50" />
	  <org.rephial.xyangband.SeekBarPreference
		  android:key="angband.middleOpacity"
		  android:title="Middle Opacity"
		  seekBar:min="0"
		  seekBar:max="100"
		  seekBar:defaultVal="100" />

		<CheckBoxPreference
			android:key="angband.qwertynumpad"
			android:defaultValue="false"
			android:title="Qwerty NumPad"
			android:summary="Qwerty keyboard comes with NumPad" />

		<CheckBoxPreference
			android:key="angband.use_adv_keyboard"
			android:defaultValue="true"
			android:title="Use Advanced Keyboard" />

		<CheckBoxPreference
			android:key="angband.show_adv_keymaps"
			android:defaultValue="true"
			android:dependency="angband.use_adv_keyboard"
			android:title="Show keymaps if keymap mode is ON" />

		<CheckBoxPreference
			android:key="angband.use_vert_keyboard"
			android:defaultValue="false"
			android:dependency="angband.use_adv_keyboard"
			android:title="Use Vertical Layout for Advanced Keyboard" />

		<CheckBoxPreference
			android:key="angband.auto_hide_adv_kbd"
			android:defaultValue="false"
			android:dependency="angband.use_adv_keyboard"
			android:title="Hide keys after 5 seconds" />

      <org.rephial.xyangband.SeekBarPreference
		  android:key="angband.keyboard_width"
		  android:title="Keyboard Width"
		  android:dependency="angband.use_adv_keyboard"
		  seekBar:min="0"
		  seekBar:max="100"
		  seekBar:defaultVal="100" />
	  <org.rephial.xyangband.SeekBarPreference
		  android:key="angband.keyboard_height"
		  android:title="Keyboard Height"
		  android:dependency="angband.use_adv_keyboard"
		  seekBar:min="0"
		  seekBar:max="100"
		  seekBar:defaultVal="0" />

	  <org.rephial.xyangband.SeekBarPreference
		  android:key="angband.ribbonbuttonmult"
		  android:title="Ribbon button size multiplier"
		  seekBar:min="0"
		  seekBar:max="100"
		  seekBar:defaultVal="50" />
	  <CheckBoxPreference
		  android:key="angband.showautolist"
		  android:defaultValue="false"
		  android:title="Auto display long lists"
		  android:summary="When you are prompted for selection" />

		<!--
		<ListPreference
			android:key="angband.ribbon_rows"
			android:title="Number of extra rows in ribbon"
			android:defaultValue="0"
			android:entries="@array/extraRibbonRows"
			android:entryValues="@array/extraRibbonRows"/>
		-->

      <CheckBoxPreference
		  android:key="angband.useicons"
		  android:defaultValue="true"
		  android:title="Use Icons"
		  android:summary="Use Icons for ribbon buttons" />
	<PreferenceScreen
	   android:title="Hardware Key Mapping"
	   android:summary="Configure hardware buttons on your device to perform various functions">
	  <PreferenceScreen
		 android:title="Display Functions"
		 android:summary="Change display, font size, virtual keyboard">
		<org.rephial.xyangband.KeyMapPreference android:key="angband.virtkeykey" android:title="Toggle Virtual Keyboard"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.zoominkey" android:title="Zoom In"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.zoomoutkey" android:title="Zoom Out"/>
	  </PreferenceScreen>
	  <PreferenceScreen
		 android:title="Letters and Numbers"
		 android:summary="A-Z, 0-9">
		<org.rephial.xyangband.KeyMapPreference android:key="angband.akey" android:title="A"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.bkey" android:title="B"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.ckey" android:title="C"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.dkey" android:title="D"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.ekey" android:title="E"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.fkey" android:title="F"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.gkey" android:title="G"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.hkey" android:title="H"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.ikey" android:title="I"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.jkey" android:title="J"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.kkey" android:title="K"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.lkey" android:title="L"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.mkey" android:title="M"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.nkey" android:title="N"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.okey" android:title="O"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.pkey" android:title="P"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.qkey" android:title="Q"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.rkey" android:title="R"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.skey" android:title="S"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.tkey" android:title="T"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.ukey" android:title="U"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.vkey" android:title="V"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.wkey" android:title="W"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.xkey" android:title="X"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.ykey" android:title="Y"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.zkey" android:title="Z"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.0key" android:title="0"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.1key" android:title="1"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.2key" android:title="2"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.3key" android:title="3"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.4key" android:title="4"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.5key" android:title="5"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.6key" android:title="6"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.7key" android:title="7"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.8key" android:title="8"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.9key" android:title="9"/>
	  </PreferenceScreen>
	  <PreferenceScreen
		 android:title="Modifiers and Movers"
		 android:summary="Esc, Ctrl, Shift, Alt, Space, Enter, Directions">
		<org.rephial.xyangband.KeyMapPreference android:key="angband.downkey" android:title="Arrow Down"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.leftkey" android:title="Arrow Left"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.rightkey" android:title="Arrow Right"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.upkey" android:title="Arrow Up"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.bkspacekey" android:title="Backspace"/>
		<org.rephial.xyangband.KeyMapModPreference android:key="angband.ctrlkey" android:title="Control Key"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.enterkey" android:title="Enter Key"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.backkey" android:title="Back"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.esckey" android:title="Esc Key"/>
		<org.rephial.xyangband.KeyMapModPreference android:key="angband.laltkey" android:title="Left Alt/Fn Key"/>
		<org.rephial.xyangband.KeyMapModPreference android:key="angband.lshiftkey" android:title="Left Shift Key"/>
		<org.rephial.xyangband.KeyMapModPreference android:key="angband.raltkey" android:title="Right Alt/Fn Key"/>
		<org.rephial.xyangband.KeyMapModPreference android:key="angband.rshiftkey" android:title="Right Shift Key"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.spacekey" android:title="Space"/>
	  </PreferenceScreen>
	  <PreferenceScreen
		 android:title="Symbols"
		 android:summary="Punctuation and other non-alpha numeric keys">
		<org.rephial.xyangband.KeyMapPreference android:key="angband.ampkey" android:title="Ampersand &amp;"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.astkey" android:title="Asterisk *"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.atkey" android:title="At @"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.bquotekey" android:title="Back Quote `"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.bslashkey" android:title="Back Slash \\"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.colonkey" android:title="Colon :"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.commakey" android:title="Comma ,"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.dollarkey" android:title="Dollar $"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.dquotekey" android:title="Double Quote &quot;"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.equalkey" android:title="Equals ="/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.exclkey" android:title="Exclamation !"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.fslashkey" android:title="Forward Slash /"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.gtkey" android:title="Greater Than &gt;"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.lbkey" android:title="Left Brace ["/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.lckey" android:title="Left Curly {"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.lpkey" android:title="Left Paren ("/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.ltkey" android:title="Less Than &lt;"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.minuskey" android:title="Minus -"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.percentkey" android:title="Percent %"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.periodkey" android:title="Period ."/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.pipekey" android:title="Pipe |"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.pluskey" android:title="Plus +"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.poundkey" android:title="Pound #"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.questkey" android:title="Question ?"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.rbkey" android:title="Right Brace ]"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.rckey" android:title="Right Curly }"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.rpkey" android:title="Right Paren )"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.scolonkey" android:title="Semicolon ;"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.squotekey" android:title="Single Quote '"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.tildekey" android:title="Tilde ~"/>
		<org.rephial.xyangband.KeyMapPreference android:key="angband.underkey" android:title="Underscore _"/>
	  </PreferenceScreen>
	  <ListPreference
		 android:title="Ctrl Key Double-Tap"
		 android:summary="Double tap function for hardware button mapped to the Ctrl Key function"
		 android:key="angband.ctrldoubletap"
		 android:defaultValue="EnterKey"
		 android:entries="@array/virtKeyActionDescriptions"
		 android:entryValues="@array/virtKeyActions"/>
	  <org.rephial.xyangband.KeyMapResetPreference
		 android:key="angband.resetallkeys"
		 android:title="Reset all hardware keys"
		 android:summary="Restores all key mappings back to the default configuration"/>
	</PreferenceScreen>
	<CheckBoxPreference
	   android:key="angband.portraitkb"
	   android:title="@string/preferences_portraitkb_title"
	   android:summary="@string/preferences_portraitkb_summary"
	   android:defaultValue="true"/>
	<CheckBoxPreference
	   android:key="angband.landscapekb"
	   android:title="@string/preferences_landscapekb_title"
	   android:summary="@string/preferences_landscapekb_summary"
	   android:defaultValue="false"/>
	<CheckBoxPreference
	   android:key="angband.enabletouch"
	   android:defaultValue="true"
	   android:title="@string/preferences_enabletouch_title"
	   android:summary="@string/preferences_enabletouch_summary" />
	<CheckBoxPreference
		  android:key="angband.touchright"
		  android:defaultValue="true"
		  android:dependency="angband.enabletouch"
		  android:title="@string/preferences_touchright_title"
		  android:summary="@string/preferences_touchright_summary" />
	<org.rephial.xyangband.SeekBarPreference
		  android:key="angband.touchmultiplier"
		  android:title="Touch directional size multiplier"
		  android:dependency="angband.touchright"
		  seekBar:min="0"
		  seekBar:max="100"
		  seekBar:defaultVal="40" />
	<CheckBoxPreference
		  android:key="angband.enable_touch_drag"
		  android:defaultValue="true"
		  android:dependency="angband.touchright"
		  android:title="Allow drag-and-drop of the touch directionals"	/>
	<ListPreference
	   android:title="Center screen tap action"
	   android:summary="Select functionality for center screen tap"
	   android:key="angband.centerscreentap"
	   android:defaultValue="Comma"
	   android:dependency="angband.enabletouch"
	   android:entries="@array/virtKeyActionDescriptions"
	   android:entryValues="@array/virtKeyActions"/>
  </PreferenceCategory>
</PreferenceScreen>
